--- a/index.html
+++ b/index.html
@@ -7,7 +7,103 @@ static: no
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12">
+        <p>
+          Lorem ipsum dolor sit amet
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+            diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+            erat volutpat.
+        </p>
+        <a>Stories</a>
+      </div>
+    </div>
+  </div>
+</section>
 
+<section>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>
+          Stories
+        </h1>
+        <img>
+        <p>
+          Live life. There's more to life than the stick you light.
+        </p>
+        <p>
+          Some copy about how smoking affects the life not only of the people
+          who do it but also of the people around them. Lorem ipsum dolor sit
+          amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+          tincidunt ut laoreet dolore magna aliquam erat volutpat. Emotional.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>
+          The Campaign
+        </h1>
+        <img>
+        <p>
+          Sometimes, quitting is the best way to win.
+        </p>
+        <p>
+          Walang Wagi Sa Yois is lorem ipsum dolor sit
+          amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+          tincidunt ut laoreet dolore magna aliquam erat volutpat. Emotional.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container-fluid">
+
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>
+          Smoking in Numbers
+        </h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>
+          Effects of Smoking
+        </h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>
+          Graphic Health Warnings
+        </h1>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<section>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>
+          Partners
+        </h1>
+        <img>
+        <img>
+        <img>
       </div>
     </div>
   </div>
