--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 ---
 layout: main
 static: no
+
+home: true
+navHide: jumbotron
+animate: true
 ---
 
-<section class="km-jumbotron" style="background-image:url('{{ site.baseurl }}/images/bg.jpg')">
+<section id="jumbotron" class="km-jumbotron" style="background-image:url('{{ site.baseurl }}/images/bg.jpg')">
   <section class="km-jumbotron-overlay">
     <div class="container-fluid">
       <div class="row">
@@ -37,55 +41,51 @@ static: no
 
         <div class="row">
           <div class="col-lg-4">
-            <div class="panel panel-default panel-stories">
-              <div class="panel-heading">
-                <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
-                <h3 class="h3-stories">Lorem ipsum dolor</h3>
+            <a class="anchor-stories">
+              <div class="panel panel-default panel-stories">
+                <div class="panel-heading">
+                  <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
+                  <h3 class="h3-stories">Lorem ipsum dolor</h3>
+                </div>
+                <div class="panel-body">
+                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                    aliquam erat volutpat.</p>
+                </div>
               </div>
-              <div class="panel-body">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat.</p>
-              </div>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4">
-            <div class="panel panel-default panel-stories">
-              <div class="panel-heading">
-                <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
-                <h3 class="h3-stories">Lorem ipsum dolor</h3>
+            <a class="anchor-stories">
+              <div class="panel panel-default panel-stories">
+                <div class="panel-heading">
+                  <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
+                  <h3 class="h3-stories">Lorem ipsum dolor</h3>
+                </div>
+                <div class="panel-body">
+                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                    aliquam erat volutpat.</p>
+                </div>
               </div>
-              <div class="panel-body">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat.</p>
-              </div>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4">
-            <div class="panel panel-default panel-stories">
-              <div class="panel-heading">
-                <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
-                <h3 class="h3-stories">Lorem ipsum dolor</h3>
+            <a class="anchor-stories">
+              <div class="panel panel-default panel-stories">
+                <div class="panel-heading">
+                  <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
+                  <h3 class="h3-stories">Lorem ipsum dolor</h3>
+                </div>
+                <div class="panel-body">
+                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                    aliquam erat volutpat.</p>
+                </div>
               </div>
-              <div class="panel-body">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat.</p>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
-
-        <img>
-        <p>
-          Live life. There's more to life than the stick you light.
-        </p>
-        <p>
-          Some copy about how smoking affects life. Lorem ipsum dolor sit
-          amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-          tincidunt ut laoreet dolore magna aliquam erat volutpat. Emotional.
-        </p>
       </div>
     </div>
   </div>
@@ -99,14 +99,19 @@ static: no
           The Campaign
         </h1>
         <img class="img-logo img-responsive" src="{{ site.baseurl }}/images/logo-full.png">
-        <p>
-          Sometimes, quitting is the best way to win.
-        </p>
-        <p>
-          Walang Wagi Sa Yosi is lorem ipsum dolor sit
-          amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-          tincidunt ut laoreet dolore magna aliquam erat volutpat. Emotional.
-        </p>
+
+        <div class="row row-limit-p">
+          <div class="col-lg-12">
+            <p class="p-em">
+              Sometimes, quitting is the best way to win.
+            </p>
+            <p>
+              Walang Wagi Sa Yosi is lorem ipsum dolor sit
+              amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+              tincidunt ut laoreet dolore magna aliquam erat volutpat. Emotional.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -144,6 +149,9 @@ static: no
           </div>
         </div>
       </div>
+      <div class="col-lg-12 text-center">
+        <a class="btn btn-default km-btn">See More</a>
+      </div>
     </div>
   </div>
 </section>
@@ -179,6 +187,9 @@ static: no
             erat volutpat.</p>
           </div>
         </div>
+      </div>
+      <div class="col-lg-12 text-center">
+        <a class="btn btn-default km-btn">See More</a>
       </div>
     </div>
 
@@ -216,7 +227,7 @@ static: no
   </div>
 </section>
 
-<section id="partners" class="section-main">
+<section id="partners" class="section-main hidden">
   <div class="container-fluid">
     <div class="row row-limit">
       <div class="col-lg-12">
