--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@ animate: true
               erat volutpat.
           </p>
           <div class="text-center">
-            <a class="btn btn-default km-btn km-jumbotron-btn">Stories</a>
+            <a class="btn btn-default km-btn km-jumbotron-btn km-btn-lg" href="{{ site.baseurl }}#stories">Stories</a>
           </div>
+
+          <a class="a-arrow" href="{{ site.baseurl }}#stories">
+            <svg class="arrows">
+              <path class="a1" d="M0 0 L30 20 L60 0"></path>
+  						<!--path class="a1" d="M0 0 L30 32 L60 0"></path>
+  						<path class="a2" d="M0 20 L30 52 L60 20"></path>
+  						<path class="a3" d="M0 40 L30 72 L60 40"></path-->
+  					</svg>
+          <a>
+
           <div class="km-jumbotron-margin-bottom"></div>
         </div>
       </div>
@@ -31,7 +41,8 @@ animate: true
   </section>
 </section>
 
-<section id="stories" class="section-main">
+<section class="section-main section-imagebg" style="background-image:url('{{ site.baseurl }}/images/bg-white.jpg');">
+  <a class="anchor" id="stories"></a>
   <div class="container-fluid">
     <div class="row row-limit">
       <div class="col-lg-12">
@@ -40,7 +51,7 @@ animate: true
         </h1>
 
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
             <a class="anchor-stories">
               <div class="panel panel-default panel-stories">
                 <div class="panel-heading">
@@ -55,7 +66,7 @@ animate: true
               </div>
             </a>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
             <a class="anchor-stories">
               <div class="panel panel-default panel-stories">
                 <div class="panel-heading">
@@ -70,7 +81,7 @@ animate: true
               </div>
             </a>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
             <a class="anchor-stories">
               <div class="panel panel-default panel-stories">
                 <div class="panel-heading">
@@ -84,6 +95,9 @@ animate: true
                 </div>
               </div>
             </a>
+          </div>
+          <div class="col-lg-12 text-center">
+            <a class="btn btn-default km-btn km-btn-lg">See More</a>
           </div>
         </div>
       </div>
@@ -91,7 +105,8 @@ animate: true
   </div>
 </section>
 
-<section id="about" class="section-main section-gradient">
+<section class="section-main section-gradient">
+  <a class="anchor" id="about"></a>
   <div class="container-fluid">
     <div class="row row-limit">
       <div class="col-lg-12">
@@ -117,7 +132,8 @@ animate: true
   </div>
 </section>
 
-<section id="info" class="section-main section-dark">
+<section class="section-main section-dark">
+  <a class="anchor" id="info"></a>
   <div class="container-fluid">
 
     <div class="row row-limit">
@@ -126,31 +142,25 @@ animate: true
           Smoking in Numbers
         </h1>
         <div class="row">
-          <div class="col-lg-4 col-numbers">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers">
             <img class="img-responsive img-numbers" src="{{ site.baseurl }}/images/lungs-monoline.png">
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-            diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
-            erat volutpat.</p>
+            <p>Smoking kills 10 Filipinos every hour due to cancer, stroke, lung and heart diseases brought on
+              by cigarette smoking. (World Health Organization)</p>
           </div>
-          <div class="col-lg-4 col-numbers">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers">
             <img class="img-responsive img-numbers" src="{{ site.baseurl }}/images/lungs-monoline.png">
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-            diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
-            erat volutpat.</p>
+            <p>Twenty­eight percent or 17.3 million Filipino adults age 15 years and older are current tobacco
+              smokers, according to the results of the 2009 Global Adult Tobacco Survey (GATS).</p>
           </div>
-          <div class="col-lg-4 col-numbers">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers">
             <img class="img-responsive img-numbers" src="{{ site.baseurl }}/images/lungs-monoline.png">
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-            diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
-            erat volutpat.</p>
+            <p>23 percent of Filipino adults are daily tobacco smokers: 38 percent for males and 7 percent for
+              females. (Philippine Statistics Authority)</p>
           </div>
         </div>
       </div>
       <div class="col-lg-12 text-center">
-        <a class="btn btn-default km-btn">See More</a>
+        <a class="btn btn-default km-btn km-btn-lg">See More</a>
       </div>
     </div>
   </div>
@@ -165,38 +175,41 @@ animate: true
           Effects of Smoking
         </h1>
         <div class="row">
-          <div class="col-lg-4 col-effects">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects">
             <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/lungs-monoline.png">
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-            diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
-            erat volutpat.</p>
+            <h2>Weakened Immune System</h2>
+            <p>Cigarette smoke contains high levels of tar and other chemicals, which can make your immune
+              system less effective at fighting off infections. This means you're more likely to get sick, and are
+              vulnerable to even the common cold and the flu.</p>
           </div>
-          <div class="col-lg-4 col-effects">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects">
             <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/lungs-monoline.png">
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-            diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
-            erat volutpat.</p>
+            <h2>A Chance for Cancer</h2>
+            <p>A single cigarette contains over 4,800 chemicals, 69 of which are known to cause cancer.
+              Smoking gives cancer a chance to take over your body and increases the risks of getting more smoking-
+              related diseases. Over 30% of cancer could be prevented by avoiding tobacco and alcohol, having a
+              healthy diet and physical activity. Don’t give cancer a chance.</p>
           </div>
-          <div class="col-lg-4 col-effects">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects">
             <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/lungs-monoline.png">
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-            diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
-            erat volutpat.</p>
+            <h2>Issue of the Heart</h2>
+            <p>The chemicals in tobacco smoke harm your blood cells. Smoking raises blood pressure,
+              which increases the risk of stroke. It can also can damage the function of your heart and the
+              structure and function of your blood vessels.  Although nicotine is the main active agent in
+              cigarette smoke, other chemicals and compounds such as tar and carbon monoxide are also
+              harmful to your heart in many ways.</p>
           </div>
         </div>
       </div>
       <div class="col-lg-12 text-center">
-        <a class="btn btn-default km-btn">See More</a>
+        <a class="btn btn-default km-btn km-btn-lg">See More</a>
       </div>
     </div>
 
   </div>
 </section>
 
-<section id="ghw" class="section-main section-gradient">
+<section class="section-main section-imagebg" style="background-image:url('{{ site.baseurl }}/images/bg-white.jpg');">
   <div class="container-fluid">
 
     <div class="row row-limit">
