--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: main
 
 home: true
 navHide: jumbotron
+allocateBottom: true
 slick: true
 animate: true
 ---
@@ -32,7 +33,7 @@ animate: true
   						<path class="a2" d="M0 20 L30 52 L60 20"></path>
   						<path class="a3" d="M0 40 L30 72 L60 40"></path-->
   					</svg>
-          <a>
+          </a>
 
           <div class="km-jumbotron-margin-bottom"></div>
         </div>
@@ -54,7 +55,7 @@ animate: true
 
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            <a class="anchor-stories">
+            <a class="anchor-stories" href="{{ site.baseurl }}/story">
               <div class="panel panel-default panel-stories">
                 <div class="panel-heading">
                   <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
@@ -70,7 +71,7 @@ animate: true
             </a>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            <a class="anchor-stories">
+            <a class="anchor-stories" href="{{ site.baseurl }}/story">
               <div class="panel panel-default panel-stories">
                 <div class="panel-heading">
                   <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
@@ -86,7 +87,57 @@ animate: true
             </a>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            <a class="anchor-stories">
+            <a class="anchor-stories" href="{{ site.baseurl }}/story">
+              <div class="panel panel-default panel-stories">
+                <div class="panel-heading">
+                  <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
+                  <h3 class="h3-stories">Lorem ipsum dolor</h3>
+                </div>
+                <div class="panel-body">
+                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                    aliquam erat volutpat.</p>
+                </div>
+                <div class="panel-footer"><button class="btn btn-default km-btn btn-block">Read More &gt;</button></div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row hidden-xs" style="margin-top:10px;" >
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
+            <a class="anchor-stories" href="{{ site.baseurl }}/story">
+              <div class="panel panel-default panel-stories">
+                <div class="panel-heading">
+                  <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
+                  <h3 class="h3-stories">Lorem ipsum dolor</h3>
+                </div>
+                <div class="panel-body">
+                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                    aliquam erat volutpat.</p>
+                </div>
+                <div class="panel-footer"><button class="btn btn-default km-btn btn-block">Read More &gt;</button></div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
+            <a class="anchor-stories" href="{{ site.baseurl }}/story">
+              <div class="panel panel-default panel-stories">
+                <div class="panel-heading">
+                  <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
+                  <h3 class="h3-stories">Lorem ipsum dolor</h3>
+                </div>
+                <div class="panel-body">
+                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                    aliquam erat volutpat.</p>
+                </div>
+                <div class="panel-footer"><button class="btn btn-default km-btn btn-block">Read More &gt;</button></div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
+            <a class="anchor-stories" href="{{ site.baseurl }}/story">
               <div class="panel panel-default panel-stories">
                 <div class="panel-heading">
                   <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
@@ -154,10 +205,10 @@ animate: true
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers">
             <img class="img-responsive img-numbers" src="{{ site.baseurl }}/images/lungs-monoline.png">
-            <p>Twenty­eight percent or 17.3 million Filipino adults age 15 years and older are current tobacco
+            <p>Twenty­-eight percent or 17.3 million Filipino adults age 15 years and older are current tobacco
               smokers, according to the results of the 2009 Global Adult Tobacco Survey (GATS).</p>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers hidden-xs">
             <img class="img-responsive img-numbers" src="{{ site.baseurl }}/images/lungs-monoline.png">
             <p>23 percent of Filipino adults are daily tobacco smokers: 38 percent for males and 7 percent for
               females. (Philippine Statistics Authority)</p>
@@ -195,7 +246,7 @@ animate: true
               related diseases. Over 30% of cancer could be prevented by avoiding tobacco and alcohol, having a
               healthy diet and physical activity. Don’t give cancer a chance.</p>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects hidden-xs">
             <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/lungs-monoline.png">
             <h2>Issue of the Heart</h2>
             <p>The chemicals in tobacco smoke harm your blood cells. Smoking raises blood pressure,
